# runtime-guard

./: .gitignore  AGENT_MCP_CONFIGS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_DEV.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  License.md  MANUAL.md  README.md  RELEASE.md  SECURITY.md  STATUS.md  airg_cli.py  approvals.py  audit.py  backup.py  budget.py  code_review.md  config.py  glama.json  models.py  policy.json  policy_engine.py  pyproject.toml  requirements.txt  server.py  test_attacker_suite.py  tests.md
.github/workflows/: ci-package.yml  publish-pypi.yml
dev/: results.md
docs/: AGENT_MCP_CONFIGS.md  ARCHITECTURE.md  CHANGELOG_DEV.md  DOCKER.md  INDEX.md  INSTALL.md  LINUX_FIX_CHECKLIST.md  LINUX_VALIDATION.md  LINUX_VALIDATION_SUMMARY.md  LINUX_VALIDATION_V2.md  MANUAL.md  RELEASE.md  RELEASE_CHECKLIST.md  TEST_PLAN.md  TOOL_EQUIVALENCE.md  mcp-only.md  roadmap.md  telemetry.md  tests.md
scripts/: analyze_backups.py  analyze_gaps.py  parse_log.py
src/: agent_configs.py  agent_configurator.py  agent_posture.py  airg_cli.py  airg_hook.py  approvals.py  audit.py  backup.py  budget.py  config.py  executor.py  mcp_config_manager.py  policy_engine.py  reports.py  runtime_context.py  script_sentinel.py  server.py  telemetry.py
src/tools/: __init__.py  command_tools.py  file_tools.py  restore_tools.py
src/ui/: __init__.py  backend_flask.py  catalog.json  server.py  service.py
src/ui/static/: app.js  index.html
tests/: __init__.py  test_agent_configs.py  test_agent_configurator.py  test_agent_posture.py  test_airg_hook.py  test_approvals_store.py  test_attacker_suite.py  test_backup_config.py  test_command_substitution_policy.py  test_executor.py  test_helpers.py  test_mcp_config_manager.py  test_reports_store.py  test_retry_clamp.py  test_setup_wizard.py  test_telemetry.py  test_ui_policy_service.py
tools/: __init__.py  command_tools.py  file_tools.py  restore_tools.py
ui/: backend_flask.py  catalog.json  service.py
ui/static/: styles.css
ui_v3/: __init__.py  index.html  package.json  tailwind.config.js  vite.config.js
ui_v3/src/: App.jsx  index.css
ui_v3/src/components/: CollapsibleSection.jsx  IconBtn.jsx  SegControl.jsx
