[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-runtime-guard"
version = "1.2-dev"
description = "MCP security wrapper with policy tiers, approvals, backup, and audit."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0,<2.0",
  "flask>=3.0,<4.0",
]

[project.scripts]
airg = "airg_cli:main"
airg-setup = "airg_cli:main_setup_entrypoint"
airg-init = "airg_cli:main_init"
airg-server = "airg_cli:main_server"
airg-ui = "airg_cli:main_ui"
airg-up = "airg_cli:main_up_entrypoint"
airg-doctor = "airg_cli:main_doctor"
airg-service = "airg_cli:main_service"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "airg_cli",
  "server",
  "config",
  "approvals",
  "audit",
  "backup",
  "budget",
  "executor",
  "models",
  "policy_engine",
  "reports",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tools*", "ui*"]

[tool.setuptools.package-data]
ui = ["catalog.json", "static/*"]
ui_v3 = ["dist/index.html", "dist/assets/*"]
