[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-runtime-guard"
version = "2.2.1"
description = "MCP security wrapper with policy tiers, approvals, backup, and audit."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "ai-safety", "agent-security", "policy-enforcement", "audit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "mcp>=1.0,<2.0",
  "flask>=3.0,<4.0",
]

[project.urls]
Homepage = "https://github.com/runtimeguard/runtime-guard"
Repository = "https://github.com/runtimeguard/runtime-guard"
Issues = "https://github.com/runtimeguard/runtime-guard/issues"
Changelog = "https://github.com/runtimeguard/runtime-guard/blob/main/CHANGELOG.md"

[project.scripts]
airg = "airg_cli:main"
airg-setup = "airg_cli:main_setup_entrypoint"
airg-init = "airg_cli:main_init"
airg-server = "airg_cli:main_server"
airg-ui = "airg_cli:main_ui"
airg-up = "airg_cli:main_up_entrypoint"
airg-doctor = "airg_cli:main_doctor"
airg-service = "airg_cli:main_service"
airg-hook = "airg_hook:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "airg_cli",
  "server",
  "config",
  "approvals",
  "audit",
  "backup",
  "executor",
  "models",
  "policy_engine",
  "script_sentinel",
  "telemetry",
  "reports",
  "runtime_context",
  "agent_configs",
  "agent_posture",
  "agent_configurator",
  "mcp_config_manager",
  "airg_hook",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tools*", "ui*"]

[tool.setuptools.package-data]
ui = ["catalog.json"]
ui_v3 = ["dist/index.html", "dist/assets/*"]

[tool.setuptools.data-files]
"ui_v3/dist" = ["ui_v3/dist/index.html"]
"ui_v3/dist/assets" = ["ui_v3/dist/assets/*"]
